Adjusted portfolio columns

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,28 +1,28 @@
 html {
-    background-image: url(white-diamond-dark.png);
+    background-image: url("assets/img/white-diamond-dark.png");
     background-color: #120f11;
 }
 .card{
     padding-top: 2rem;
-    margin: 4rem;
+    margin: 1rem;
     border: double 2px slategray;
     border-radius: 20px;
 }
 .card-image,
 .image,
 .content{
-    margin:15px;
+    margin: 10px;
     display: flex;
     align-content: center;
-}
-
-.navbar-menu{
-    background-color: rgb(230, 207, 230);
 }
 
 .card-footer{
     background-color: rgb(230, 207, 230);
     border-radius: 20px;
+}
+.card-header{
+    display: inline;
+    text-align: center;
 }
 
 .hnm-logo{
